# clarin_emotagger_wrapper

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
clarin_emotagger/: __init__.py  client.py  emotagger_config.py  emotagger_models.py  emotagger_wrapper.py  logging_config.py
tests/: __init__.py  test_emotagger_wrapper.py
